samples/_failures_safe/1761224282_15bc5b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d43617e.c: In function ‘main’:
./samples/SAFE/__tmp_3d43617e.c:179:9: error: expected expression at end of input
  179 |         if (tokens[token_count].type == TOKEN_EOF)
      |         ^~
./samples/SAFE/__tmp_3d43617e.c:179:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3d43617e.c:179:9: error: expected declaration or statement at end of input
